# anki-agent

./: .gitignore  pyproject.toml
.claude/: python-standards.md  workflow.md
.claude/commands/: review-code.md
docs/: agent.md  card-types.md  cli.md  getting-started.md  media.md
src/anki_agent/: __init__.py  client.py  config.py  images.py  ipa.py  languages.py  settings.py
src/anki_agent/agents/: __init__.py  cli.py  core.py  prompts.py  whatsapp.py
src/anki_agent/audio/: __init__.py  focloir.py  google.py  provider.py
src/anki_agent/notes/: __init__.py  builder.py  duplicates.py  note.py  note_defs.py  templates.py
src/anki_agent/notes/templates/: cloze_back.html  cloze_front.html  grammar_back.html  grammar_front.html  source_to_target_back.html  source_to_target_front.html  target_to_source_back.html  target_to_source_front.html
src/anki_agent/notes/templates/css/: styles.css
tests/: test_client.py  test_images.py  test_ipa.py  test_languages.py  test_settings.py
tests/agents/: conftest.py  test_cli.py  test_core.py
tests/audio/: test_focloir.py  test_google.py
tests/notes/: test_builder.py  test_duplicates.py  test_note.py  test_templates.py
